Update evaluation notebook: change model name, execution counts, and add timing for questions
- Changed model name from `llama3.1:latest` to `llama3-chatqa:latest`.
- Updated execution counts for several code cells to reflect the new order.
- Added timing measurements for each question during evaluation to track performance.
- Adjusted output messages to reflect new model responses and execution details.

--- a/DeepSeek_test/evaluation.ipynb
+++ b/DeepSeek_test/evaluation.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": null,
    "id": "5fe6dd67",
    "metadata": {},
    "outputs": [
@@ -25,7 +25,7 @@
      "output_type": "stream",
      "text": [
       "LOCAL_OPENAI_BASE_URL: http://localhost:11434/v1\n",
-      "MODEL_NAME: llama3.1:latest\n"
+      "MODEL_NAME: llama3-chatqa:latest\n"
      ]
     }
    ],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 2,
    "id": "b89c805b",
    "metadata": {},
    "outputs": [
@@ -57,7 +57,7 @@
      "output_type": "stream",
      "text": [
       "GET http://localhost:11434/v1/models -> 200\n",
-      "{\"object\":\"list\",\"data\":[{\"id\":\"mistral-nemo:latest\",\"object\":\"model\",\"created\":1767702805,\"owned_by\":\"library\"},{\"id\":\"llama3.1:latest\",\"object\":\"model\",\"created\":1767698163,\"owned_by\":\"library\"},{\"id\":\"qwen3:8b\",\"object\":\"model\",\"created\":1767692280,\"owned_by\":\"library\"},{\"id\":\"deepseek-r1:8b\",\"ob\n"
+      "{\"object\":\"list\",\"data\":[{\"id\":\"llama3-chatqa:latest\",\"object\":\"model\",\"created\":1767794497,\"owned_by\":\"library\"},{\"id\":\"llama3.2:latest\",\"object\":\"model\",\"created\":1767793477,\"owned_by\":\"library\"},{\"id\":\"mistral-nemo:latest\",\"object\":\"model\",\"created\":1767702805,\"owned_by\":\"library\"},{\"id\":\"llama3.\n"
      ]
     }
    ],
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 3,
    "id": "11687c07",
    "metadata": {},
    "outputs": [
@@ -83,7 +83,7 @@
      "output_type": "stream",
      "text": [
       "POST http://localhost:11434/v1/chat/completions -> 200\n",
-      "{\"id\":\"chatcmpl-859\",\"object\":\"chat.completion\",\"created\":1767706999,\"model\":\"llama3.1:latest\",\"system_fingerprint\":\"fp_ollama\",\"choices\":[{\"index\":0,\"message\":{\"role\":\"assistant\",\"content\":\"Hello, how are you today?\"},\"finish_reason\":\"stop\"}],\"usage\":{\"prompt_tokens\":16,\"completion_tokens\":8,\"total\n"
+      "{\"id\":\"chatcmpl-915\",\"object\":\"chat.completion\",\"created\":1767794573,\"model\":\"llama3-chatqa:latest\",\"system_fingerprint\":\"fp_ollama\",\"choices\":[{\"index\":0,\"message\":{\"role\":\"assistant\",\"content\":\" Hello there! How may I help you today?\"},\"finish_reason\":\"stop\"}],\"usage\":{\"prompt_tokens\":63,\"completi\n"
      ]
     }
    ],
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 4,
    "id": "520e5693",
    "metadata": {},
    "outputs": [
@@ -117,7 +117,7 @@
      "text": [
       "Ready.\n",
       "LOCAL_OPENAI_BASE_URL: http://localhost:11434/v1\n",
-      "MODEL_NAME: llama3.1:latest\n",
+      "MODEL_NAME: llama3-chatqa:latest\n",
       "Try: bot.reply('Hello!')\n"
      ]
     }
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 5,
    "id": "20048336",
    "metadata": {},
    "outputs": [
@@ -147,11 +147,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello!\n",
-      "\n",
-      "1. \"Distress signals COLREG\"\n",
-      "2. \"Navigational watch duties COLREG\"\n",
-      "3. \"Manoeuvring and warning signals Rule\"\n"
+      "Hello there! How may I assist you today?\n"
      ]
     }
    ],
@@ -162,10 +158,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 6,
    "id": "d42c5ea1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\celli\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\sentence_transformers\\cross_encoder\\CrossEncoder.py:13: TqdmExperimentalWarning: Using `tqdm.autonotebook.tqdm` in notebook mode. Use `tqdm.tqdm` instead to force console mode (e.g. in jupyter console)\n",
+      "  from tqdm.autonotebook import tqdm, trange\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From c:\\Users\\celli\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\tf_keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# --- PDF attachment (Hybrid RAG: BM25 + Embeddings + Multi-Query + CoVe) ---\n",
     "from __future__ import annotations\n",
@@ -637,14 +650,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "7f794fa7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9e01ea43059c476c969d03a8fe7aa183",
+       "model_id": "9cc5f464f63d48d19250d6dd108e67eb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -662,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 8,
    "id": "d98cb3c6",
    "metadata": {},
    "outputs": [],
@@ -972,7 +985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 9,
    "id": "81c21283",
    "metadata": {},
    "outputs": [
@@ -1047,7 +1060,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 10,
    "id": "84070ff5",
    "metadata": {},
    "outputs": [
@@ -1055,13 +1068,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "q1 : 51.774319648742676s\n",
+      "q2 : 61.1369526386261s\n",
+      "q3 : 74.2618477344513s\n",
+      "q4 : 65.50696015357971s\n",
+      "q5 : 63.7942955493927s\n",
+      "q6 : 95.42311549186707s\n",
+      "q7 : 92.42543840408325s\n",
+      "q8 : 55.08546566963196s\n",
+      "q9 : 109.19661474227905s\n",
+      "q10 : 93.6745240688324s\n",
       "Done 10/12\n",
+      "q11 : 99.64414310455322s\n",
+      "q12 : 98.1123435497284s\n",
       "Done 12/12\n",
       "Saved: C:\\Users\\celli\\Documents\\.PIP2026\\PIP-2026-LOTUSim_G5_Fatigue\\DeepSeek_test\\rag_eval_answers.csv\n"
      ]
     }
    ],
    "source": [
+    "import time\n",
     "# Run the evaluation: ask each question on the attached PDF\n",
     "MAX_QUESTIONS = None  # set to an int for a quick dry-run, e.g. 5\n",
     "\n",
@@ -1071,7 +1097,9 @@
     "for i, q in enumerate(questions_to_run, start=1):\n",
     "    bot.reset()  # avoid history leakage across questions\n",
     "    strict_prompt = \"\"\n",
+    "    t0 = time.time()\n",
     "    ans = ask_on_pdf(strict_prompt + q)\n",
+    "    print(f\"q{i} : {time.time() - t0}s\")\n",
     "    results.append({\"Question\": q, \"Answer\": ans})\n",
     "    if i % 10 == 0 or i == total:\n",
     "        print(f\"Done {i}/{total}\")\n",
