Fix quantization binary path in fine-tuning notebook

--- a/Finetune/finetune_llama31_colregs.ipynb
+++ b/Finetune/finetune_llama31_colregs.ipynb
@@ -657,7 +657,7 @@
     "\n",
     "# quantize binary is typically in build/bin/quantize (or build/Release/quantize.exe on Windows)\n",
     "quant_candidates = [\n",
-    "    OUT_DIR / 'llama.cpp' / 'build' / 'bin' / 'quantize',\n",
+    "    OUT_DIR / 'llama.cpp' / 'build' / 'bin' / 'llama-quantize',\n",
     "    OUT_DIR / 'llama.cpp' / 'build' / 'bin' / 'quantize.exe',\n",
     "    OUT_DIR / 'llama.cpp' / 'build' / 'Release' / 'quantize.exe',\n",
     "]\n",
