Add LLM implementation and model file for COLREGS quiz generation and grading
- Implemented the LLM class for handling interactions with an OpenAI-compatible API (Ollama) for generating quizzes and grading answers based on COLREGS rules.
- Added methods for generating quiz items, grading answers against ground truth and rule applications, and retrieving context from attached PDFs.
- Introduced a new ModelFile to reference the fine-tuned model for the task.

--- a/Finetune/finetune_llama31_colregs.ipynb
+++ b/Finetune/finetune_llama31_colregs.ipynb
@@ -13,17 +13,28 @@
     "from pathlib import Path\n",
     "\n",
     "# --- Paths (Colab-friendly) ---\n",
-    "# Assumption: you uploaded/copied the files into the current working directory (usually /content).\n",
-    "DATA_JSON = Path('donnees_synthetiques.json')\n",
+    "# Assumption: you uploaded/copied these files into the current working directory (usually /content).\n",
+    "\n",
+    "# Task 1: quiz generation\n",
+    "QUIZ_JSON = Path('quizz_gen.json')\n",
+    "\n",
+    "# Task 2: grade an answer against a ground-truth answer (+ rubric)\n",
+    "GRADE_JSON = Path('grade_dataset.json')\n",
+    "\n",
+    "# Task 3: grade a scenario answer against the rule-application reference\n",
+    "SCENARIO_GRADE_JSON = Path('scenario_dataset.json')\n",
+    "SCENARIO_SOURCE_JSON = Path('colreg_v9_split.json')  # used only to fetch Application_Regle by ID\n",
+    "\n",
+    "# Optional: COLREG PDF for retrieval (only needed if you enable USE_RETRIEVED_CONTEXT)\n",
     "PDF_PATH = Path('COLREG-Consolidated-2018.pdf')\n",
     "\n",
     "OUT_DIR = Path('finetune_out')\n",
     "OUT_DIR.mkdir(parents=True, exist_ok=True)\n",
     "\n",
     "# --- Training data choice ---\n",
-    "# If True: rebuild contexts using your chunking+retrieval (recommended for RAG).\n",
-    "# If False: use the dataset's provided `context` field directly.\n",
-    "USE_RETRIEVED_CONTEXT = True\n",
+    "# For these 3 tasks, we typically rely on dataset-provided evidence (quotes / reference application).\n",
+    "# Set True only if you want to experiment with retrieving evidence from the PDF instead.\n",
+    "USE_RETRIEVED_CONTEXT = False\n",
     "\n",
     "# Retrieval/chunking (keep aligned with your evaluation notebook defaults)\n",
     "CHUNK_TOKENS = 1024\n",
@@ -39,7 +50,7 @@
     "HF_TOKEN = os.getenv('HF_TOKEN')  # set in your environment if required\n",
     "\n",
     "# --- SFT/LoRA hyperparams (start small) ---\n",
-    "MAX_TRAIN_SAMPLES = None  # set e.g. 500 for a quick dry-run\n",
+    "MAX_TRAIN_SAMPLES = None  # set e.g. 500 for a quick dry-run across all tasks\n",
     "TRAIN_SPLIT = 0.95\n",
     "SEED = 42\n",
     "\n",
@@ -50,7 +61,10 @@
     "EPOCHS = 1\n",
     "\n",
     "print('CWD:', Path('.').resolve())\n",
-    "print('DATA_JSON:', DATA_JSON.resolve() if DATA_JSON.exists() else DATA_JSON)\n",
+    "print('QUIZ_JSON:', QUIZ_JSON.resolve() if QUIZ_JSON.exists() else QUIZ_JSON)\n",
+    "print('GRADE_JSON:', GRADE_JSON.resolve() if GRADE_JSON.exists() else GRADE_JSON)\n",
+    "print('SCENARIO_GRADE_JSON:', SCENARIO_GRADE_JSON.resolve() if SCENARIO_GRADE_JSON.exists() else SCENARIO_GRADE_JSON)\n",
+    "print('SCENARIO_SOURCE_JSON:', SCENARIO_SOURCE_JSON.resolve() if SCENARIO_SOURCE_JSON.exists() else SCENARIO_SOURCE_JSON)\n",
     "print('PDF_PATH:', PDF_PATH.resolve() if PDF_PATH.exists() else PDF_PATH)\n",
     "print('OUT_DIR:', OUT_DIR.resolve())\n",
     "print('USE_RETRIEVED_CONTEXT:', USE_RETRIEVED_CONTEXT)\n",
@@ -66,33 +80,68 @@
    "source": [
     "import json\n",
     "import random\n",
+    "import re\n",
     "\n",
-    "with open(DATA_JSON, 'r', encoding='utf-8') as f:\n",
-    "    data = json.load(f)\n",
+    "def _load_json(path: Path):\n",
+    "    with open(path, 'r', encoding='utf-8') as f:\n",
+    "        return json.load(f)\n",
     "\n",
-    "rows = data.get('dataset', data)\n",
-    "if not isinstance(rows, list):\n",
-    "    raise ValueError('Expected a list at key dataset or at root')\n",
+    "_RULE_SPLIT_RE = re.compile(r'(?=Rule\\s+\\d+)')\n",
     "\n",
-    "# Basic validation\n",
-    "clean = []\n",
-    "for r in rows:\n",
+    "def _parse_rule_refs(value) -> list[str]:\n",
+    "    if value is None:\n",
+    "        return []\n",
+    "    if isinstance(value, list):\n",
+    "        return [str(x).strip() for x in value if str(x).strip()]\n",
+    "    if not isinstance(value, str):\n",
+    "        return [str(value).strip()]\n",
+    "    s = value.strip()\n",
+    "    if not s:\n",
+    "        return []\n",
+    "    # Handles e.g. \"Rule 15 (...) Rule 16 (...)\"\n",
+    "    parts = [p.strip() for p in _RULE_SPLIT_RE.split(s) if p.strip()]\n",
+    "    return parts if parts else [s]\n",
+    "\n",
+    "quiz_rows = _load_json(QUIZ_JSON) if QUIZ_JSON.exists() else []\n",
+    "grade_rows = _load_json(GRADE_JSON) if GRADE_JSON.exists() else []\n",
+    "scenario_rows = _load_json(SCENARIO_GRADE_JSON) if SCENARIO_GRADE_JSON.exists() else []\n",
+    "source_rows = _load_json(SCENARIO_SOURCE_JSON) if SCENARIO_SOURCE_JSON.exists() else []\n",
+    "\n",
+    "if not isinstance(quiz_rows, list):\n",
+    "    raise ValueError('quizz_gen.json must be a JSON array')\n",
+    "if not isinstance(grade_rows, list):\n",
+    "    raise ValueError('grade_dataset.json must be a JSON array')\n",
+    "if not isinstance(scenario_rows, list):\n",
+    "    raise ValueError('scenario_dataset.json must be a JSON array')\n",
+    "if not isinstance(source_rows, list):\n",
+    "    raise ValueError('colreg_v9_split.json must be a JSON array')\n",
+    "\n",
+    "# Build ID -> reference application mapping for the scenario grading task\n",
+    "application_by_id: dict[str, str] = {}\n",
+    "comments_by_id: dict[str, str] = {}\n",
+    "rule_refs_by_id: dict[str, list[str]] = {}\n",
+    "for r in source_rows:\n",
     "    if not isinstance(r, dict):\n",
     "        continue\n",
-    "    q = (r.get('question') or '').strip()\n",
-    "    a = (r.get('answer') or '').strip()\n",
-    "    c = (r.get('context') or '').strip()\n",
-    "    if q and a:\n",
-    "        clean.append({'question': q, 'answer': a, 'context': c})\n",
+    "    sid = str(r.get('ID') or '').strip()\n",
+    "    if not sid:\n",
+    "        continue\n",
+    "    app = str(r.get('Application_Regle') or '').strip()\n",
+    "    if app:\n",
+    "        application_by_id[sid] = app\n",
+    "    com = str(r.get('Commentaires') or '').strip()\n",
+    "    if com:\n",
+    "        comments_by_id[sid] = com\n",
+    "    rule_refs_by_id[sid] = _parse_rule_refs(r.get('Reference_Regle'))\n",
     "\n",
-    "if MAX_TRAIN_SAMPLES:\n",
-    "    random.seed(SEED)\n",
-    "    random.shuffle(clean)\n",
-    "    clean = clean[: int(MAX_TRAIN_SAMPLES)]\n",
+    "print('Loaded quiz rows:', len(quiz_rows))\n",
+    "print('Loaded grade rows:', len(grade_rows))\n",
+    "print('Loaded scenario rows:', len(scenario_rows))\n",
+    "print('Loaded source rows:', len(source_rows))\n",
+    "print('Scenario rows with reference application available:', sum(1 for r in scenario_rows if str(r.get('source_id') or '').strip() in application_by_id))\n",
     "\n",
-    "print('Loaded samples:', len(clean))\n",
-    "print('Example keys:', list(clean[0].keys()) if clean else None)\n",
-    "print('Example question:', clean[0]['question'] if clean else None)"
+    "# (Optional) cap sizes while iterating\n",
+    "# MAX_PER_TASK = None  # e.g. 400"
    ]
   },
   {
@@ -342,38 +391,201 @@
    "source": [
     "import math\n",
     "\n",
-    "SYSTEM_PROMPT = (\n",
-    "    'You are a COLREGS assistant. Answer the QUESTION using ONLY the provided EXCERPTS. '\n",
-    "    'If the EXCERPTS do not contain the answer, say you do not know. '\n",
-    "    'Cite evidence using parentheses like (Chunk 12). '\n",
-    "    'Do not invent rule text.'\n",
-    ")\n",
+    "SYSTEM_PROMPT_QUIZ = (\n",
+    "    'You generate COLREGS quiz items. '\n",
+    "    'Use ONLY the provided quotes as evidence; do not invent rule text.'\n",
+    " )\n",
     "\n",
-    "def make_example(question: str, answer: str, *, context_text: str) -> dict:\n",
-    "    user = (\n",
-    "        'EXCERPTS:\\n'\n",
-    "        + (context_text.strip() if context_text.strip() else '[No relevant excerpts found]')\n",
-    "        + '\\n\\nQUESTION:\\n'\n",
-    "        + question.strip()\n",
-    "    )\n",
+    "SYSTEM_PROMPT_GRADE_TRUTH = (\n",
+    "    'You are a strict grader for COLREGS answers. '\n",
+    "    'Grade the STUDENT_ANSWER against the TRUTH_ANSWER using the RUBRIC. '\n",
+    "    'Do not add external facts.'\n",
+    " )\n",
+    "\n",
+    "SYSTEM_PROMPT_GRADE_SCENARIO = (\n",
+    "    'You are a strict grader for COLREGS scenario rule-application. '\n",
+    "    'Grade the STUDENT_ANSWER against the REFERENCE_APPLICATION text. '\n",
+    "    'Do not add external facts.'\n",
+    " )\n",
+    "\n",
+    "def _json_dumps(obj: dict) -> str:\n",
+    "    return json.dumps(obj, ensure_ascii=False, sort_keys=False)\n",
+    "\n",
+    "def make_chat_example(*, system_prompt: str, user_content: str, assistant_content: str) -> dict:\n",
+    "    # Defensive: avoid accidental tuple/non-str inputs breaking .strip()\n",
+    "    system_prompt = system_prompt if isinstance(system_prompt, str) else str(system_prompt)\n",
+    "    user_content = user_content if isinstance(user_content, str) else str(user_content)\n",
+    "    assistant_content = assistant_content if isinstance(assistant_content, str) else str(assistant_content)\n",
     "    return {\n",
     "        'messages': [\n",
-    "            {'role': 'system', 'content': SYSTEM_PROMPT},\n",
-    "            {'role': 'user', 'content': user},\n",
-    "            {'role': 'assistant', 'content': answer.strip()},\n",
+    "            {'role': 'system', 'content': system_prompt},\n",
+    "            {'role': 'user', 'content': user_content.strip()},\n",
+    "            {'role': 'assistant', 'content': assistant_content.strip()},\n",
     "        ]\n",
     "    }\n",
     "\n",
-    "examples = []\n",
-    "for r in clean:\n",
-    "    q = r['question']\n",
-    "    a = r['answer']\n",
-    "    if USE_RETRIEVED_CONTEXT:\n",
-    "        idxs = retrieve_context(q, k=RETRIEVE_K)\n",
-    "        ctx = build_excerpts(idxs)\n",
-    "    else:\n",
-    "        ctx = r.get('context', '')\n",
-    "    examples.append(make_example(q, a, context_text=ctx))\n",
+    "def _format_quotes(quotes: list[dict]) -> str:\n",
+    "    if not quotes:\n",
+    "        return '[No quotes provided]'\n",
+    "    lines = []\n",
+    "    for q in quotes:\n",
+    "        if not isinstance(q, dict):\n",
+    "            continue\n",
+    "        ref = (q.get('ref') or '').strip()\n",
+    "        qt = (q.get('quote') or '').strip()\n",
+    "        if qt:\n",
+    "            if ref:\n",
+    "                lines.append(f'- ({ref}) {qt}')\n",
+    "            else:\n",
+    "                lines.append(f'- {qt}')\n",
+    "    return '\\n'.join(lines) if lines else '[No quotes provided]'\n",
+    "\n",
+    "examples: list[dict] = []\n",
+    "counts = {'quiz_generate': 0, 'grade_truth_answer': 0, 'rule_application_grade': 0}\n",
+    "\n",
+    "# --------------------\n",
+    "# Task 1: quiz_generate\n",
+    "# --------------------\n",
+    "for r in quiz_rows:\n",
+    "    if not isinstance(r, dict):\n",
+    "        continue\n",
+    "    quotes = r.get('supporting_quotes') or []\n",
+    "    if not isinstance(quotes, list):\n",
+    "        quotes = []\n",
+    "    difficulty = (r.get('difficulty') or '').strip()\n",
+    "    rule_refs = r.get('rule_refs') or []\n",
+    "    if not isinstance(rule_refs, list):\n",
+    "        rule_refs = _parse_rule_refs(rule_refs)\n",
+    "    question = (r.get('question') or '').strip()\n",
+    "    truth = (r.get('truth_answer') or '').strip()\n",
+    "    if not question or not truth:\n",
+    "        continue\n",
+    "\n",
+    "    user = (\n",
+    "        'TASK: quiz_generate\\n'\n",
+    "        + (f'DIFFICULTY: {difficulty}\\n' if difficulty else '')\n",
+    "        + ('RULE_REFS: ' + ', '.join([str(x) for x in rule_refs if str(x).strip()]) + '\\n' if rule_refs else '')\n",
+    "        + 'QUOTES:\\n' + _format_quotes(quotes) + '\\n\\n'\n",
+    "        + 'Generate ONE quiz item as JSON with keys: question, truth_answer.'\n",
+    "    )\n",
+    "    assistant = _json_dumps({'question': question, 'truth_answer': truth})\n",
+    "    examples.append(make_chat_example(system_prompt=SYSTEM_PROMPT_QUIZ, user_content=user, assistant_content=assistant))\n",
+    "    counts['quiz_generate'] += 1\n",
+    "\n",
+    "# -------------------------------------------\n",
+    "# Task 2: grade_truth_answer (with rubric)\n",
+    "# -------------------------------------------\n",
+    "for r in grade_rows:\n",
+    "    if not isinstance(r, dict):\n",
+    "        continue\n",
+    "    q = (r.get('question') or '').strip()\n",
+    "    truth = (r.get('truth_answer') or '').strip()\n",
+    "    rubric = r.get('rubric') or []\n",
+    "    if not q or not truth or not isinstance(rubric, list):\n",
+    "        continue\n",
+    "    support = r.get('supporting_quotes') or []\n",
+    "    if not isinstance(support, list):\n",
+    "        support = []\n",
+    "    user_answers = r.get('user_answers') or []\n",
+    "    if not isinstance(user_answers, list):\n",
+    "        continue\n",
+    "\n",
+    "    # Keep rubric compact but explicit\n",
+    "    rubric_lines = []\n",
+    "    for it in rubric:\n",
+    "        if not isinstance(it, dict):\n",
+    "            continue\n",
+    "        rid = (it.get('id') or '').strip()\n",
+    "        mx = it.get('max')\n",
+    "        crit = (it.get('criterion') or '').strip()\n",
+    "        if rid and crit and isinstance(mx, (int, float)):\n",
+    "            rubric_lines.append(f'- {rid} (max {int(mx)}): {crit}')\n",
+    "    if not rubric_lines:\n",
+    "        continue\n",
+    "\n",
+    "    for ua in user_answers:\n",
+    "        if not isinstance(ua, dict):\n",
+    "            continue\n",
+    "        student = (ua.get('answer') or '').strip()\n",
+    "        grade = ua.get('grade') or {}\n",
+    "        if not student or not isinstance(grade, dict):\n",
+    "            continue\n",
+    "        score_total = grade.get('score_total')\n",
+    "        if not isinstance(score_total, int):\n",
+    "            continue\n",
+    "\n",
+    "        user = (\n",
+    "            'TASK: grade_truth_answer\\n'\n",
+    "            + 'QUESTION:\\n' + q + '\\n\\n'\n",
+    "            + 'TRUTH_ANSWER:\\n' + truth + '\\n\\n'\n",
+    "            + 'RUBRIC (sum to 10):\\n' + '\\n'.join(rubric_lines) + '\\n\\n'\n",
+    "            + 'SUPPORTING_QUOTES:\\n' + _format_quotes(support) + '\\n\\n'\n",
+    "            + 'STUDENT_ANSWER:\\n' + student + '\\n\\n'\n",
+    "            + 'Return ONLY JSON in the schema: {\"score_total\": int, \"breakdown\": [...], \"missing_points\": [...], \"incorrect_claims\": [...], \"feedback\": str}.'\n",
+    "        )\n",
+    "        assistant = _json_dumps({\n",
+    "            'score_total': grade.get('score_total'),\n",
+    "            'breakdown': grade.get('breakdown', []),\n",
+    "            'missing_points': grade.get('missing_points', []),\n",
+    "            'incorrect_claims': grade.get('incorrect_claims', []),\n",
+    "            'feedback': grade.get('feedback', ''),\n",
+    "        })\n",
+    "        examples.append(make_chat_example(system_prompt=SYSTEM_PROMPT_GRADE_TRUTH, user_content=user, assistant_content=assistant))\n",
+    "        counts['grade_truth_answer'] += 1\n",
+    "\n",
+    "# ----------------------------------------------------\n",
+    "# Task 3: rule_application_grade (scenario grading)\n",
+    "# ----------------------------------------------------\n",
+    "for r in scenario_rows:\n",
+    "    if not isinstance(r, dict):\n",
+    "        continue\n",
+    "    scenario = (r.get('scenario') or '').strip()\n",
+    "    source_id = str(r.get('source_id') or '').strip()\n",
+    "    answers = r.get('answers') or []\n",
+    "    if not scenario or not source_id or not isinstance(answers, list):\n",
+    "        continue\n",
+    "    reference_application = (application_by_id.get(source_id) or '').strip()\n",
+    "    if not reference_application:\n",
+    "        # Without reference application text, the model would have to memorize scenarios to grade consistently.\n",
+    "        # Skip to keep supervision well-defined.\n",
+    "        continue\n",
+    "\n",
+    "    rule_refs = r.get('rule_refs') or []\n",
+    "    if not isinstance(rule_refs, list):\n",
+    "        rule_refs = _parse_rule_refs(rule_refs)\n",
+    "    if not rule_refs:\n",
+    "        rule_refs = rule_refs_by_id.get(source_id, [])\n",
+    "\n",
+    "    for a in answers:\n",
+    "        if not isinstance(a, dict):\n",
+    "            continue\n",
+    "        student = (a.get('answer') or '').strip()\n",
+    "        score = a.get('score')\n",
+    "        if not student or not isinstance(score, int):\n",
+    "            continue\n",
+    "\n",
+    "        user = (\n",
+    "            'TASK: rule_application_grade\\n'\n",
+    "            + f'SOURCE_ID: {source_id}\\n'\n",
+    "            + ('RULE_REFS: ' + ', '.join([str(x) for x in rule_refs if str(x).strip()]) + '\\n' if rule_refs else '')\n",
+    "            + 'SCENARIO:\\n' + scenario + '\\n\\n'\n",
+    "            + 'REFERENCE_APPLICATION:\\n' + reference_application + '\\n\\n'\n",
+    "            + 'STUDENT_ANSWER:\\n' + student + '\\n\\n'\n",
+    "            + 'Return ONLY JSON: {\"score\": int} (0..10).'\n",
+    "        )\n",
+    "        assistant = _json_dumps({'score': score})\n",
+    "        examples.append(make_chat_example(system_prompt=SYSTEM_PROMPT_GRADE_SCENARIO, user_content=user, assistant_content=assistant))\n",
+    "        counts['rule_application_grade'] += 1\n",
+    "\n",
+    "print('Built examples (total):', len(examples))\n",
+    "print('Per-task counts:', counts)\n",
+    "\n",
+    "# Optional: downsample for quick runs\n",
+    "if MAX_TRAIN_SAMPLES:\n",
+    "    random.seed(SEED)\n",
+    "    random.shuffle(examples)\n",
+    "    examples = examples[: int(MAX_TRAIN_SAMPLES)]\n",
+    "    print('Downsampled examples:', len(examples))\n",
     "\n",
     "random.seed(SEED)\n",
     "random.shuffle(examples)\n",
@@ -395,8 +607,11 @@
     "print('Eval examples:', len(eval_examples))\n",
     "print('Wrote:', train_path)\n",
     "print('Wrote:', eval_path)\n",
-    "print('Sample user message (truncated):')\n",
-    "print(train_examples[0]['messages'][1]['content'][:400])"
+    "\n",
+    "# Show a small sample prompt (truncated)\n",
+    "if train_examples:\n",
+    "    print('Sample user message (truncated):')\n",
+    "    print(train_examples[0]['messages'][1]['content'][:400])"
    ]
   },
   {
